--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
@@ -23,7 +24,6 @@
     "name": "TrentonYo",
     "email": "askstartout@gmail.com",
     "url": "https://github.com/Start-Out"
-
   },
   "contributors": []
 }
